<resources>
    <string name="app_name">Expendio</string>
    <string name="title_home">Home</string>
    <string name="title_expense_analysis">Expense Analysis</string>
    <string name="title_notifications">Notifications</string>
    <string name="audio_record_permission_denied">Sorry couldn\'t hear, permission issues</string>
    <string name="listening">Listening....</string>
    <string name="processing">Processing your expense audio...</string>
    <string name="deaf">Hold on</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Expendio Settings</string>
    <string name="nav_header_subtitle">Audio expense management</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="unacceptedExpenseEmpty">No expenses for approval</string>
    <string name="audioUnApprovedExpenses">UnApproved expenses via Audio</string>
    <string name="notificationUnApprovedExpenses">Recurring expense on: </string>
    <string name="newTagDescriptionWord">Word under this category:</string>
    <string name="tagSavedSuccessfully">Tags saved successfully</string>
    <string name="downloadOptionIsNotEnabled">Please provide access for storage</string>
    <string name="selectFileToView">Touch any file to view</string>
    <string name="noteOnChartData">Please note: If an expense is under multiple tags then the expense will be counted under first tag in which it is associated. Eg say if pizza is tagged under food and party then it will be displayed under food section only.</string>
    <string name="reason">Desc</string>
    <string name="defaultExpenseLimit">Expense Limit:</string>
    <string name="expenseDefaultSuccessfully">Expense limit saved successfully</string>
    <string name="recurring_expenses_title">Recurring expenses</string>
    <string name="recurringExpenseNote">These expenses will not be automatically added, this will popup as a notification for you to review or discard.</string>
    <string name="daySelection">Select a day</string>
    <string name="recurringExpensesSavedSuccessfully">Recurring expenses saved successfully</string>
    <string name="mandatory">Mandatory</string>
    <string name="recurrenceExpensePendingForApproval">Expenses pending for approval</string>
    <string name="expendioSettingsNote">Expendio - An Expense management app powered by just dictating your expenses. Thriwin Solutions</string>
    <string name="noEmailAppAvailable">No email app available. Please manually send mail to muralidharan.nandhakumar@gmail.com</string>
    <string name="startDayOfMonth">Expense start day</string>
    <string name="startDayOfMonthNote">Please input a day from 1-28. If not it will be defaulted to day 1. If start day is changed in between an expense month, it will affect all entries after this change.</string>
    <string name="notificationHour">Recurring expenses\nNotification hour</string>
    <string name="notificationHourNote">Please input value from 0 - 23, If not it will be defaulted to 8 PM i.e. 20 hrs</string>
    <string name="settingsSavedSuccessfully">Settings saved successfully</string>
    <string name="eraseAllData">Reset of all your expenses, tags and recurring expenses.</string>
    <string name="blockAds">Block Ads</string>
    <string name="reminderRequest">Do you want expendio to remind you for filling any expenses?</string>
    <string name="reminder_prompt">Do Not Disturb</string>
    <string name="backgroundTheme">MOUNTAIN</string>
    <string name="expendioSettings">Expendio Settings</string>
    <string name="sms_tracker_title">Expense from SMS</string>
    <string name="sms_enabled_text">Do you want to enable SMS based expense suggestion</string>
    <string name="savedSmsPhrases">All sms phrases and preferences saved successfully</string>
    <string name="smsInfererNote">Please update sms phrases in such a way to uniquely identify your sms from your bank. These phrases will be used as  hint to identify and help find your expenses from messages.</string>
    <string name="smsPermissionDenied">SMS based expense suggestion will not work if you don\'t provide permission.</string>
    <string name="sms_entries_instructions">Please follow the instruction when you set the sms phrases.\n\n 1. Use phrases from your bank smses to uniquely identify the message \n\n 2. You can use comma separated values to define sms phrases, so that only if all phrases matches it will be considered for processing</string>
    <string name="expenseSavedSuccessfully">Expenses saved successfully</string>
    <string name="noFilesGeneratedYet">No files generated to display.</string>
    <string name="AudioHeader">Expenses - Voice capture</string>
    <string name="bluetoothPermissionIsRequiredToShareData">Bluetooth permission required to share data.</string>
    <string name="share_expense">Share Expense</string>
    <string name="smsSharingNote">SMS sharing is done using your basic SMS capability of your mobile. This action would incur mobile carrier charges.
        \n\nFor successful acceptance of expenses, it is necessary that recipient also configured your mobile number. </string>
    <string name="bluetoothNote">This option uses bluetooth to share your expense information. This works when both the device is in proximity. You should manually pair with other device once</string>
    <string name="smsSendSuccesfully">Sms scheduled to be sent, check outbox. Recipient should have configured your number to receive the expenses in Expendio.</string>
    <string name="bluetoothSendSuccesfully">Expense send successfully</string>
    <string name="smsSendFailed">sending SMS failed. Please try later.</string>
    <string name="addUserHeader">Add users to send/receive expenses.</string>
    <string name="remove_expense">Shared Expenses</string>
    <string name="noteIfOtherExpenseIncluded">Please note: You can only edit your expenses, hence shared expenses is not editable here</string>
    <string name="noteIfOtherExpenseNotEditable">Please note: You can only edit your expenses, hence shared expenses is not editable here</string>
    <string name="defaultExpenseLimitNote">The expense limit is an indicative figure to let you know whether your are within the limit or exceeded the limt.</string>
    <string name="notEditable">Shared expense, non-editable</string>
    <string name="expenseCategoryHeader">Edit - Expense Category</string>
    <string name="offerScreenHeader">Offers for you</string>
    <string name="offerScreenHeaderTitle">Swipe down for offers...</string>
    <string name="restoreExpense">Restore Expense</string>
    <string name="restoreExpenseNote">Paste your expense report from spreadsheet and click on the restore button above</string>
    <string name="noHeadersPresent">Paste the expense with the headers.</string>
    <string name="restoreExpenseAcceptanceConfirmation">Processed %s expenses. Do you wish to restore these expenses?
        \nThis action will remove any expenses for that month found locally!!!.</string>
    <string name="expenseRestoredSuccessfully">Expenses processed and restored successfully</string>
    <string name="noExpenseToRestore">No expenses processed for restoration</string>
    <string name="offerLoading">Loading your offers.. \nPlease wait....</string>
    <string name="offerLoadingMain">Loading offers...</string>
    <string name="themeSettings">Theme setting</string>
    <string name="selectThemes">Select your theme</string>
    <string name="expendioThemeSettingSavedSuccessfully">Expendio theme is saved successfully</string>
    <string name="monthExpenseDeleteConfirmation">Removal of expenses is an undoable action. Do you want continue?</string>
    <string name="touchToReviewExpense">Touch here to review the expenses</string>
    <string name="amount">Amount</string>
    <string name="noNetwork">No/poor internet connection. You need internet connection for speech to text</string>
    <string name="noNetworkForGoogleSync">No/poor internet connection. You need internet connection for syncing data to google</string>
    <string name="dayWiseDeleteOfOtherExpenseNotPossible">Shared expenses cannot be removed day-wise. \nFor complete removal of shared expenses use option in side menu. </string>
    <string name="googleCloudSync">Google cloud sync</string>
    <string name="clientId">459334050180-bki334m4rcvrl4puib014kdbrnr9vi1p.apps.googleusercontent.com</string>
    <string name="syncData">Sync Data</string>
    <string name="settingsSyncFailure">Sync failure.. Please allow some cool off period before trying next time. This could be because of overload on google cloud APIs</string>
    <string name="select_file">Select File</string>
    <string name="fileNotPresent">File not exist</string>
    <string name="setupGoogleSync">Setup google sync</string>
    <string name="googleRestoreSettingFailed">Restoring from google failed. Please try again...</string>
    <string name="googleRestoreSettingSuccess">Successfully restored settings information from google.</string>
    <string name="settingsSyncSuccess">Settings synched successfully...</string>
    <string name="googleAccountSetupSuccesfully">Your google setup was successful...</string>
    <string name="googleAccountFailure">Google account setup failed... Please try again...</string>
    <string name="syncDetails">Syncing account: %s</string>
    <string name="stopGoogleSync">Detach Google account</string>
    <string name="logoutSuccessfull">Google sigount successful..</string>
    <string name="expenseSyncFailure">Expense syncing failed...</string>
    <string name="settingsRestorationAndSync"><![CDATA[Settings Restore & Sync]]></string>
    <string name="syncSettings">Backup settings to Google</string>
    <string name="restoreSettings">Restore settings from Google</string>
    <string name="expenseRestorationAndSync"><![CDATA[Expense Restore & Sync]]></string>
    <string name="syncExpenses">Backup all expenses to Google</string>
    <string name="restoreExpenses">Restore all expenses from Google</string>
    <string name="manual">Manual syncing...</string>
    <string name="AllExpensesAreBackedUp">All expenses in your phone is backed up successfully...</string>
    <string name="AllExpensesBackedUpFailure">Backing to Google failed... Please try again later...</string>
    <string name="expenseSyncSuccess">Expense data sync successfull</string>
    <string name="googleRestoreExpensesFailed">Restoring expenses failed... Please try again later...</string>
    <string name="googleRestoreExpensesSuccess">Expense saved successfully</string>
    <string name="myGoogleAccount">I\'m the primary user of this account</string>
    <string name="defineGoogleAccountOwnership">Define Google account ownership</string>
    <string name="sharedGoogleAccount"> I share a common Google account with the below mentioned user and I identify myself with below name.
        So that my expense will be automatically synced to primary user\'s phone and vice versa</string>
    <string name="primaryUserName">Primary account \nholder name</string>
    <string name="yourName">Your name\n</string>
    <string name="updateGoogleOwnership"><![CDATA[Update account ownership & activate syncing]]></string>
    <string name="bothYourNameAndPrimaryUserNamesAreMandatory">Please enter your name and primary account holder name.</string>
    <string name="ownershipUpdatedSuccessfully"><![CDATA[Updated successfully & sync with google server started]]></string>
    <string name="backgroundSyncNotification">Silence your Google sync notification of the expenses.</string>
    <string name="feedbackHeader"><![CDATA[App Feedback & Ratings]]></string>
    <string name="sharingAndRestorationHeader"><![CDATA[Share & Restore Expenses]]></string>
</resources>