<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thriwin.expendio.GoogleCloudSynchActivity"
    tools:showIn="@layout/app_bar_google_cloud_sync">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="20dp"
        android:foregroundGravity="center_vertical"
        android:gravity="center"
        android:keepScreenOn="true"
        android:layerType="software"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <com.nex3z.flowlayout.FlowLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/setupGoogleSync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/edit_outline"
                    android:text="@string/setupGoogleSync"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/stopGoogleSync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/edit_outline"
                    android:text="@string/stopGoogleSync"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/googleOwnershipContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_outline"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/sharingMethodSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">

                    <RadioButton
                        android:id="@+id/myAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:buttonTint="@color/darkdivider"
                        android:checked="true"
                        android:text="@string/myGoogleAccount"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <RadioButton
                        android:id="@+id/otherAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:buttonTint="@color/darkdivider"
                        android:text="@string/sharedGoogleAccount"
                        android:textColor="@color/white"
                        android:textSize="15dp" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/otherAccountContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:text="@string/primaryUserName"

                            android:textAlignment="textEnd"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/othersName"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit_outline"
                            android:hint="@string/primaryUserName"
                            android:inputType="textCapSentences"
                            android:maxLength="7"

                            android:paddingLeft="5dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/colorPrimaryDarkTransparent" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"

                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:text="@string/yourName"
                            android:textAlignment="textEnd"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/yourName"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit_outline"
                            android:hint="@string/yourName"
                            android:inputType="textCapSentences"

                            android:maxLength="7"
                            android:paddingLeft="5dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/colorPrimaryDarkTransparent" />
                    </LinearLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:id="@+id/updateGoogleOwnership"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/color_button"
                        android:text="@string/updateGoogleOwnership"
                        android:textColor="@color/white" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/actionsAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/manualHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_outline">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manual"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/collapseExpand"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ic_expand" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/manualSettingContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_outline"
                        android:orientation="vertical"
                        android:paddingBottom="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsRestorationAndSync"
                            android:textColor="@color/white"
                            android:textSize="20sp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/syncGoogleAccountSettings"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:background="@drawable/edit_outline"
                                android:padding="5dp"
                                android:text="@string/syncSettings"
                                android:textColor="@color/white"
                                android:textSize="15sp" />


                            <Button
                                android:id="@+id/pullSettingsFromGoogleAccount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:background="@drawable/edit_outline"
                                android:padding="5dp"
                                android:text="@string/restoreSettings"
                                android:textColor="@color/white"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/lastBackedUpOn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_outline"
                        android:orientation="vertical"
                        android:paddingBottom="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expenseRestorationAndSync"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/syncGoogleAccountExpense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:background="@drawable/edit_outline"
                                android:padding="5dp"
                                android:text="@string/syncExpenses"
                                android:textColor="@color/white" />


                            <Button
                                android:id="@+id/pullExpensesFromGoogle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:background="@drawable/edit_outline"
                                android:padding="5dp"
                                android:text="@string/restoreExpenses"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.nex3z.flowlayout.FlowLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="@color/colorPrimaryDarkTransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
</android.support.constraint.ConstraintLayout>